--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"Token": "OTcxODI3NDYzMjIxMDM5MTY0.GJ1eb8.NrYAVEQ24U1zA0cB4vPu6tFkjbjrKaGsWTkiLY", "Prefix": "d!"}
+{"Token": "token_do_bot", "Prefix": "!"}
